--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Crack is Whack</title>
 </head>
 <body>
 <link title="timeline-styles" rel="stylesheet" href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
 <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
 
-
+<h1> 
 <img src="1928_2.jpg" alt="olimpic 1928" width=100%>
 <div id='timeline-embed' style="width: 100%; height: 600px"></div>
 <img src="2028_2.jpg" alt="olimpic 2028" width=100%>
