--- a/index.html
+++ b/index.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Crack is Whack</title>
+    <style>
+        h1 {
+            text-align: center;
+            font-size: 50px;
+        }
+
+        h2 {
+            text-align: left;
+        }
+
+        h3 {
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
 <link title="timeline-styles" rel="stylesheet" href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
 <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
 
-<h1> 
-<img src="1928_2.jpg" alt="olimpic 1928" width=100%>
+<img src="picture.png" alt="olimpic 1928" width=100%>
 <div id='timeline-embed' style="width: 100%; height: 600px"></div>
-<img src="2028_2.jpg" alt="olimpic 2028" width=100%>
+<!-- <img src="2028_2.jpg" alt="olimpic 2028" width=100%> -->
 
 
 <!-- 3 -->
