--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     var data = {
         "title": {
             "media": {
-                "url": '<img src="https://upload.wikimedia.org/wikipedia/en/4/49/1928-summer-oympics-poster.jpg">',
-                "caption": "Official poster of Olympics 1928",
-                "credit": "flickr/<a href='http://www.flickr.com/photos/tm_10001/'>tm_10001</a>"
+                url: 'https://upload.wikimedia.org/wikipedia/en/4/49/1928-summer-oympics-poster.jpg',
+                caption: "Official poster of Olympics 1928",
+                credit: "flickr/<a href='http://www.flickr.com/photos/tm_10001/'>tm_10001</a>"
             },
             "text": {
                 "headline": "100 years of Olympic Games<br/> 1928 - 2028",
-                "text": "<p>Houston's voice caught the imagination of the world propelling her to superstardom at an early age becoming one of the most awarded performers of our time. This is a look into the amazing heights she achieved and her personal struggles with substance abuse and a tumultuous marriage.</p>"
+                "text": "<p>De Spelen van de IXe Olympiade werden in 1928 gehouden te Amsterdam, Nederland. Amsterdam had eerder geprobeerd om de Olympische Spelen te mogen organiseren, maar moest in 1920 oorlogsslachtoffer Belgie (Antwerpen) en in 1924 Parijs van IOC-voorzitter Pierre de Coubertin laten voorgaan.</p>"
             }
         },
         "events": [
