--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
 <script type="text/javascript">
 
     var data = {
-        "title": {
-            "media": {
+        title: {
+            media: {
                 url: 'https://upload.wikimedia.org/wikipedia/en/4/49/1928-summer-oympics-poster.jpg',
                 caption: "Official poster of Olympics 1928",
                 credit: "flickr/<a href='http://www.flickr.com/photos/tm_10001/'>tm_10001</a>"
             },
-            "text": {
-                "headline": "100 years of Olympic Games<br/> 1928 - 2028",
-                "text": "<p>De Spelen van de IXe Olympiade werden in 1928 gehouden te Amsterdam, Nederland. Amsterdam had eerder geprobeerd om de Olympische Spelen te mogen organiseren, maar moest in 1920 oorlogsslachtoffer Belgie (Antwerpen) en in 1924 Parijs van IOC-voorzitter Pierre de Coubertin laten voorgaan.</p>"
+            text: {
+                headline: "100 years of Olympic Games<br/> 1928 - 2028",
+                text: "<p>De Spelen van de IXe Olympiade werden in 1928 gehouden te Amsterdam, Nederland. Amsterdam had eerder geprobeerd om de Olympische Spelen te mogen organiseren, maar moest in 1920 oorlogsslachtoffer Belgie (Antwerpen) en in 1924 Parijs van IOC-voorzitter Pierre de Coubertin laten voorgaan.</p>"
             }
         },
-        "events": [
+        events: [
             {
-                "media": {
-                    "url": "{{ static_url }}/img/examples/houston/family.jpg",
-                    "caption": "Houston's mother and Gospel singer, Cissy Houston (left) and cousin Dionne Warwick.",
-                    "credit": "Cissy Houston photo:<a href='http://www.flickr.com/photos/11447043@N00/418180903/'>Tom Marcello</a><br/><a href='http://commons.wikimedia.org/wiki/File%3ADionne_Warwick_television_special_1969.JPG'>Dionne Warwick: CBS Television via Wikimedia Commons</a>"
+                media: {
+                    url: "map.png",
+                    caption: "Overgebleven bebouwing uit de periode rondom de Olympische spelen van 1928",
+                    credit: "<a href='https://public.tableau.com/views/Twekkelerveld/TwekkelerveldDashboard?:embed=y&:display_count=yes'>Stadionbuurt kaart</a>"
                 },
                 "start_date": {
                     "month": "8",
