--- a/index.html
+++ b/index.html
@@ -54,17 +54,19 @@
                 },
                 text: {
                     headline: "Erfgoed Olympische Bebouwing",
-                    text: "<p>Born in New Jersey on August 9th, 1963, Houston grew up surrounded by the music business. Her mother is gospel singer Cissy Houston and her cousins are Dee Dee and Dionne Warwick.</p>"
+                    text: "<p>TEXTTEXT</p>"
                 }
             },
             {
                 media: {
                     url: "https://lh5.ggpht.com/QmajxPeyTNQvNbHUKy1UJOln_tfp4uDeqlqKHRBByb94Kme-jDdk5K7ulJ7B4l5lW55CGsfgANdZI5faq0AR_Ie3zUQ=s0",
                     caption: "Bronze medaille van de 9e Olympische spelen",
-                    credit: "<a href=\"http://unidiscmusic.com\">Unidisc Music</a>"
+                    credit: "<a href=\"https://www.rijksmuseum.nl/nl/collectie/NG-2004-88\">Rijksmuseum</a>"
                 },
                 start_date: {
-                    year: "1928"
+                    year: "1928",
+                    month: "8",
+                    day: "12"
                 },
                 text: {
                     headline: "Medailleoogst ",
@@ -73,16 +75,32 @@
             },
             {
                 media: {
-                    url: "https://lh5.ggpht.com/QmajxPeyTNQvNbHUKy1UJOln_tfp4uDeqlqKHRBByb94Kme-jDdk5K7ulJ7B4l5lW55CGsfgANdZI5faq0AR_Ie3zUQ=s0",
-                    caption: "Bronze medaille van de 9e Olympische spelen",
-                    credit: "<a href=\"http://unidiscmusic.com\">Unidisc Music</a>"
+                    url: "http://commons.wikimedia.org/wiki/Special:FilePath/GraRuebAmsterdam.JPG",
+                    caption: "Olympische groet",
+                    credit: "<a href=\"http://unidiscmusic.com\">Wikipedia</a>"
                 },
                 start_date: {
-                    year: "1928"
+                    year: "1936"
                 },
                 text: {
-                    headline: "Olympische Rijksmonumenten ",
-                    text: "Olympisch Stadion-complex Inleiding Naar zakelijk-expressionistisch ontwerp van Jan Wils in 1926-28 gebouwd sportcomplex ten behoeve van de in 1928 - voor de tot nu toe enige maal - in Nederland gehouden Olympische Spelen; het OLYMPISCH STADION-complex, uitgebreid in 1936-37, bestaat uit: 1. HET OLYMPISCH STADION, zie voor omschrijving bij complex-onderdeel met monumentnummer 451749; 2. DE MARATHONTOREN, zie voor omschrijving bij complex-onderdeel met monumentnummer 451750; 3. HET VAN TUYLLMONUMENT, zie voor omschrijving bij complex-onderdeel met monumentnummer 451751; 4. DE DUBBELE DIENSTWONING AAN DE STADIONGRACHT, zie voor omschrijving bij complex-onderdeel met monumentnummer 451753; 5. DE NOORDELIJKE DIENSTWONING, zie voor omschrijving bij complex-onderdeel met monumentnummer 451754; 6. EEN DIENSTGEBOUW, gesloopt; 7. DE ENTREEPARTIJEN EN OMMURINGEN zie voor omschrijving met complex-onderdeel met monumentnummer 451756. Complex-omschrijving Het Olympisch Stadion-complex is gesitueerd op het aan de toenmalige zuidwestelijke stadsrand gesitueerde Olympische sportterrein, omgeven door de daartoe met gebogen beloop gegraven Stadiongracht als verbinding tussen Zuider- en Noorder-Amstelkanaal en Schinkel, en door middel van afsluitmuren met hekken en dienstgebouwen afgesloten aan de zijde van het voor aan- en afvoer van publiek en verkeer ruim opgezette Stadionplein. De gebouwen van het Olympisch Stadion-complex, die rechtstreeks aan de negende Olympische Spelen herinneren, zijn uitgevoerd in een voor het werk van Jan Wils kenmerkende, deels op het werk van Frank Lloyd Wright geinspireerde, zakelijk-expressionistische trant met plastisch-geometrische vormentaal en met markante verschijningsvorm. Kenmerkend daarvoor zijn de nadruk op het metselwerk (afgewisseld door natuurstenen accenten en toepassing van glasstenen en verschillende soorten metselverbanden), de sterke horizontale lijnen van de in- en uitspringende bouwvolumes en luifels, afgewisseld door verticale accenten, en geintegreerde bloembakken en afsluitmuren. De dispositie en de door horizontale lijnen met verticale accenten bepaalde vormgeving van de verschillende complex-onderdelen - waarvan de destijds als semi-permanente bouwwerken opgetrokken schermzaal, krachtsportgebouw en zwemstadion conform de oorspronkelijke opzet direct na de Spelen zijn afgebroken - drukken op plastische wijze de ondeelbaarheid van de Spelen en de gelijkwaardigheid van alle sporten uit. Daarbij vormt het omvangrijke stadion samen met de hoog oprijzende Marathontoren de dominante kern van het inmiddels ten dele gewijzigde en in terrein-oppervlak ingeperkte complex. In het met metselwerk beklede stadiongebouw met aan beide lange zijden de voor die tijd ongebruikelijk ver uitkragende ijzeren tribune-overkappingen komt, evenals bij de Marathontoren, de toepassing van de betonnen draagconstructie zowel in- als uitwendig op diverse plaatsen tot uiting en zijn de voornaamste deur- en raampartijen uitgevoerd in staal en glas, gevat in smalle kozijnen met overwegend horizontaliserende onderverdeling, afgewisseld met verticale accenten; bij de geheel in baksteen opgetrokken dienstwoningen zijn hoofdzakelijk houten ramen en deuren toegepast. Op het terrein bevinden zich voorts aan de westzijde langs de Stadiongracht twee door de Nederlandse winnaars van de Olympische Spelen van 1936 geplante eikebomen, omgeven door eenvoudige ijzeren hekwerken met Olympische ringen en gedenkplaatje met inscriptie. Waardering Olympisch Stadion-complex van algemeen belang uit oogpunt van cultuur-, sport-, architectuur-, bouw- en stedebouwkundig-historische waarde, in het bijzonder als enig tastbaar bewaard gebleven herinnering aan de in 1928 in Nederland gehouden Olympische Spelen en als nationaal sport-, cultuur- en manifestatiepodium"
+                    headline: "Olympische Rijksmonumenten",
+                    text: "De olympische groet is een bij de Olympische Spelen door de atleten gebrachte groet met opgeheven rechterarm. De arm gaat bij deze groet helemaal omhoog, maar de olympische groet kan worden verward met de Hitlergroet. Tijdens de opening van de Olympische Winterspelen in 1936 in Garmisch-Partenkirchen brachten de Britse deelnemers expres de olympische groet en niet de \"Duitse groet\" of Hitlergroet. De omroeper in het stadion riep desondanks om dat de Britten de Duitse dictator Adolf Hitler een nazigroet hadden gebracht."
+                }
+            },
+            {
+                media: {
+                    url: "https://upload.wikimedia.org/wikipedia/commons/0/0f/Olstadion.jpg",
+                    caption: "Olympisch Stadion",
+                    credit: "<a href=\"https://nl.wikipedia.org/wiki/Olympisch_Stadion_(Amsterdam)#Marathontoren\">Wikipedia</a>"
+                },
+                start_date: {
+                    year: "1927",
+                    month: "5",
+                    day: "18"
+                },
+                text: {
+                    headline: "Olympische Rijksmonumenten",
+                    text: "Olympisch Stadiongebouw op ovalen grondslag - rondom een betonnen wielerbaan, sintelloopbaan, voetbalveld en twee atletiekvelden - als amfitheater in baksteen en beton opgetrokken Olympisch Stadiongebouw in een voor het werk van Wils typerende zakelijk-expressionistische trant en te onderscheiden in de oorspronkelijke, geheel met baksteen beklede 'binnenring' uit de eerste bouwfase (1926-28) en een in onbekleed gewapend beton uitgevoerde 'buitenring' met twee schelpvormige tribune-uitbreidingen aan beide korte zijden uit de tweede bouwfase (1936-37)."
                 }
             }
         ]
