--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Crack is Whack</title>
+    <title>Olympis</title>
     <style>
         h1 {
             text-align: center;
@@ -35,10 +35,10 @@
             media: {
                 url: 'https://upload.wikimedia.org/wikipedia/en/4/49/1928-summer-oympics-poster.jpg',
                 caption: "Official poster of Olympics 1928",
-                credit: "<a href='https://en.wikipedia.org/wiki/1928_Summer_Olympics#/media/File:1928-summer-oympics-poster.jpg'>Wikipedia</a>"
+                credit: "<a href='https://en.wikipedia.org/wiki/1928_Summer_Olympics#/media/File:1928-summer-oympics-poster.jpg'>DBpedia</a>"
             },
             text: {
-                headline: "100 years of Olympic Games<br/> 1928 - 2028",
+                headline: "100 jaar Olympische Spelen<br/> 1928 - 2028",
                 text: "<p>De Spelen van de IXe Olympiade werden in 1928 gehouden te Amsterdam, Nederland. Amsterdam had eerder geprobeerd om de Olympische Spelen te mogen organiseren, maar moest in 1920 oorlogsslachtoffer Belgie (Antwerpen) en in 1924 Parijs van IOC-voorzitter Pierre de Coubertin laten voorgaan.</p>"
             }
         },
@@ -47,7 +47,7 @@
                 media: {
                     url: "map.png",
                     caption: "Overgebleven bebouwing uit de periode rondom de Olympische spelen van 1928",
-                    credit: "<a href='https://public.tableau.com/views/olimpic_0/Dashboard1?:embed=y&:display_count=yes&publish=yes'>Stadionbuurt kaart</a>"
+                    credit: "<a href='https://public.tableau.com/views/olimpic_0/Dashboard1?:embed=y&:display_count=yes&publish=yes'>Stadionbuurt kaart: Kadaster BAG</a>"
                 },
                 start_date: {
                     year: "1928"
@@ -61,7 +61,7 @@
                 media: {
                     url: "https://lh5.ggpht.com/QmajxPeyTNQvNbHUKy1UJOln_tfp4uDeqlqKHRBByb94Kme-jDdk5K7ulJ7B4l5lW55CGsfgANdZI5faq0AR_Ie3zUQ=s0",
                     caption: "Bronze medaille van de 9e Olympische spelen",
-                    credit: "<a href=\"https://www.rijksmuseum.nl/nl/collectie/NG-2004-88\">Rijksmuseum</a>"
+                    credit: "<a href=\"https://www.rijksmuseum.nl/nl/collectie/NG-2004-88\">Rijksmuseum en Dbpedia</a>"
                 },
                 start_date: {
                     year: "1928",
@@ -77,7 +77,7 @@
                 media: {
                     url: "http://commons.wikimedia.org/wiki/Special:FilePath/GraRuebAmsterdam.JPG",
                     caption: "Olympische groet",
-                    credit: "<a href=\"http://unidiscmusic.com\">Wikipedia</a>"
+                    credit: "<a href=\"http://unidiscmusic.com\">DBpedia en Rijksmonumenten</a>"
                 },
                 start_date: {
                     year: "1936"
@@ -91,7 +91,7 @@
                 media: {
                     url: "https://upload.wikimedia.org/wikipedia/commons/0/0f/Olstadion.jpg",
                     caption: "Olympisch Stadion",
-                    credit: "<a href=\"https://nl.wikipedia.org/wiki/Olympisch_Stadion_(Amsterdam)#Marathontoren\">Wikipedia</a>"
+                    credit: "<a href=\"https://nl.wikipedia.org/wiki/Olympisch_Stadion_(Amsterdam)#Marathontoren\">DBpedia en Rijksmuseum</a>"
                 },
                 start_date: {
                     year: "1927",
@@ -99,7 +99,23 @@
                     day: "18"
                 },
                 text: {
-                    headline: "Olympische Rijksmonumenten",
+                    headline: "Start bouw Olympisch stadion",
+                    text: "Olympisch Stadiongebouw op ovalen grondslag - rondom een betonnen wielerbaan, sintelloopbaan, voetbalveld en twee atletiekvelden - als amfitheater in baksteen en beton opgetrokken Olympisch Stadiongebouw in een voor het werk van Wils typerende zakelijk-expressionistische trant en te onderscheiden in de oorspronkelijke, geheel met baksteen beklede 'binnenring' uit de eerste bouwfase (1926-28) en een in onbekleed gewapend beton uitgevoerde 'buitenring' met twee schelpvormige tribune-uitbreidingen aan beide korte zijden uit de tweede bouwfase (1936-37)."
+                }
+            },
+            {
+                media: {
+                    url: "https://youngestolympicathlete.files.wordpress.com/2016/08/olympics_helenjohns_alt-1.jpg?w=685",
+                    caption: "Clara Marangoni (13 November 1915 – 18 January 2018)",
+                    credit: "<a href=\"https://nl.wikipedia.org/wiki/Olympisch_Stadion_(Amsterdam)#Marathontoren\">Wikipedia</a>"
+                },
+                start_date: {
+                    year: "2018",
+                    month: "1",
+                    day: "18"
+                },
+                text: {
+                    headline: "Het laatste levende monument",
                     text: "Olympisch Stadiongebouw op ovalen grondslag - rondom een betonnen wielerbaan, sintelloopbaan, voetbalveld en twee atletiekvelden - als amfitheater in baksteen en beton opgetrokken Olympisch Stadiongebouw in een voor het werk van Wils typerende zakelijk-expressionistische trant en te onderscheiden in de oorspronkelijke, geheel met baksteen beklede 'binnenring' uit de eerste bouwfase (1926-28) en een in onbekleed gewapend beton uitgevoerde 'buitenring' met twee schelpvormige tribune-uitbreidingen aan beide korte zijden uit de tweede bouwfase (1936-37)."
                 }
             }
