--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 },
                 text: {
                     headline: "Erfgoed Olympische Bebouwing",
-                    text: "<p>TEXTTEXT</p>"
+                    text: "<p>Bij de verdere bouw van de stadionbuurt is het cultureel erfgoed behouden gebleven. Bijvoorbeeld de toegangspoort is nu onderdeel van nieuwbouw in het gebied. Hierdoor blijft de herrinering aan de olympische spelen van 1928 bewaard.</p>"
                 }
             },
             {
@@ -100,14 +100,14 @@
                 },
                 text: {
                     headline: "Start bouw Olympisch stadion",
-                    text: "Olympisch Stadiongebouw op ovalen grondslag - rondom een betonnen wielerbaan, sintelloopbaan, voetbalveld en twee atletiekvelden - als amfitheater in baksteen en beton opgetrokken Olympisch Stadiongebouw in een voor het werk van Wils typerende zakelijk-expressionistische trant en te onderscheiden in de oorspronkelijke, geheel met baksteen beklede 'binnenring' uit de eerste bouwfase (1926-28) en een in onbekleed gewapend beton uitgevoerde 'buitenring' met twee schelpvormige tribune-uitbreidingen aan beide korte zijden uit de tweede bouwfase (1936-37)."
+                    text: "Olympisch Stadiongebouw op ovalen grondslag - rondom een betonnen wielerbaan, sintelloopbaan, voetbalveld en twee atletiekvelden - als amfitheater in baksteen en beton opgetrokken Olympisch Stadiongebouw in een voor het werk van <a href=\"http://dbpedia.org/page/Jan_Wils\"> Wils</a> typerende zakelijk-expressionistische trant en te onderscheiden in de oorspronkelijke, geheel met baksteen beklede 'binnenring' uit de eerste bouwfase (1926-28) en een in onbekleed gewapend beton uitgevoerde 'buitenring' met twee schelpvormige tribune-uitbreidingen aan beide korte zijden uit de tweede bouwfase (1936-37)."
                 }
             },
             {
                 media: {
                     url: "https://youngestolympicathlete.files.wordpress.com/2016/08/olympics_helenjohns_alt-1.jpg?w=685",
                     caption: "Clara Marangoni (13 November 1915 – 18 January 2018)",
-                    credit: "<a href=\"https://nl.wikipedia.org/wiki/Olympisch_Stadion_(Amsterdam)#Marathontoren\">Wikipedia</a>"
+                    credit: "<a href=\"https://nl.wikipedia.org/wiki/Olympisch_Stadion_(Amsterdam)#Marathontoren\">Dbpedia</a>"
                 },
                 start_date: {
                     year: "2018",
@@ -116,9 +116,42 @@
                 },
                 text: {
                     headline: "Het laatste levende monument",
-                    text: "Olympisch Stadiongebouw op ovalen grondslag - rondom een betonnen wielerbaan, sintelloopbaan, voetbalveld en twee atletiekvelden - als amfitheater in baksteen en beton opgetrokken Olympisch Stadiongebouw in een voor het werk van Wils typerende zakelijk-expressionistische trant en te onderscheiden in de oorspronkelijke, geheel met baksteen beklede 'binnenring' uit de eerste bouwfase (1926-28) en een in onbekleed gewapend beton uitgevoerde 'buitenring' met twee schelpvormige tribune-uitbreidingen aan beide korte zijden uit de tweede bouwfase (1936-37)."
+                    text: "Carla Marangoni, better known as Clara Marangoni (born 13 November 1915), is a retired Italian gymnast who competed in the 1928 Summer Olympics. She was born in Pavia as \"Carla,\" but she is usually (mistakenly) mentioned in the official statistics as Clara. In 1928 she won the silver medal as member of the Italian gymnastics team and was therefore among the first Italian women to win an Olympic medal. She is the last surviving medalist to have won gold or silver in the 1928 Summer Olympics."
+                }
+            },
+            {
+                media: {
+                    url: "chart.png",
+                    caption: "Clara Marangoni (13 November 1915 – 18 January 2018)",
+                    credit: "<a href=\"https://nl.wikipedia.org/wiki/Olympisch_Stadion_(Amsterdam)#Marathontoren\">Dbpedia</a>"
+                },
+                start_date: {
+                    year: "2018",
+                    month: "2",
+                    day: "10"
+                },
+                text: {
+                    headline: "Vandaag",
+                    text: "Nederland leidt het medailleklassement"
+                }
+            },
+            {
+                media: {
+                    url: "http://resolver.kb.nl/resolve?urn=anp:1962:05:01:85:mpeg21",
+                    caption: "ANP radio bulletin",
+                    credit: "<a href=\"http://resolver.kb.nl/resolve?urn=anp:1962:05:01:85:mpeg21\">ANP-radio bulletins</a>"
+                },
+                start_date: {
+                    year: "1962",
+                    month: "5",
+                    day: "1"
+                },
+                text: {
+                    headline: "Verzameling sport trofeeën",
+                    text: "De radio bulletins vertellen ons dat het olympisch stadion in 1962 begon met het aanleggen van een verzameling sport-trofeeën. In aanwezigheid van de burgermeester overhandigde de Nederlandse ruiter-equipe hun olympisch diploma als eerste bijdrage aan deze verzamling. "
                 }
             }
+
         ]
     }
     var timeline_json = data;
