--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Olympis</title>
+    <title>Olympisch Amsterdam</title>
     <style>
         h1 {
             text-align: center;
