--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         events: [
             {
                 media: {
-                    url: "map.png",
+                    url: "Dashboard 1.png",
                     caption: "Overgebleven bebouwing uit de periode rondom de Olympische spelen van 1928",
                     credit: "<a href='https://public.tableau.com/views/olimpic_0/Dashboard1?:embed=y&:display_count=yes&publish=yes'>Stadionbuurt kaart: Kadaster BAG</a>"
                 },
