--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 media: {
                     url: "https://upload.wikimedia.org/wikipedia/commons/0/0f/Olstadion.jpg",
                     caption: "Olympisch Stadion",
-                    credit: "<a href=\"https://nl.wikipedia.org/wiki/Olympisch_Stadion_(Amsterdam)#Marathontoren\">DBpedia en Rijksmuseum</a>"
+                    credit: "<a href=\"https://nl.wikipedia.org/wiki/Olympisch_Stadion_(Amsterdam)#Marathontoren\">DBpedia en Rijksmonumeten</a>"
                 },
                 start_date: {
                     year: "1927",
