--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             {
                 media: {
                     url: "chart.png",
-                    caption: "Clara Marangoni (13 November 1915 – 18 January 2018)",
+                    caption: "Medailleklassement 10 February 2018",
                     credit: "<a href=\"https://nl.wikipedia.org/wiki/Olympisch_Stadion_(Amsterdam)#Marathontoren\">Dbpedia</a>"
                 },
                 start_date: {
